--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,54 @@
 }
 
 
+@font-face {
+    font-family: 'knedgeregular_italic';
+    src: url('../font/knedgeregularitalic-webfont.woff2') format('woff2'),
+         url('../font/knedgeregularitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'knedgebold';
+    src: url('../font/knedgebold-webfont.woff2') format('woff2'),
+         url('../font/knedgebold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+@font-face {
+    font-family: 'knedgebook';
+    src: url('../font/knedgebook-webfont.woff2') format('woff2'),
+         url('../font/knedgebook-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'knedgeheavy';
+    src: url('../font/knedgeheavy-webfont.woff2') format('woff2'),
+         url('../font/knedgeheavy-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+@font-face {
+    font-family: 'knedgeheavy_condensed';
+    src: url('../font/knedgeheavycondensed-webfont.woff2') format('woff2'),
+         url('../font/knedgeheavycondensed-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 
 body {
 	background-color: white;
@@ -50,10 +98,12 @@ header{
 	margin-top: 15px;
 	margin-bottom: 0px;
 	margin-right: 30px;
-	margin-left: 30px;
-	
-	
+	margin-left: 30px;	
+
+
 }
+
+/*top*/
 
 .top{
 	width: 100%
@@ -62,41 +112,26 @@ header{
 	border-bottom: 1px solid black;
 }
 
+/*title*/
 
 .title{
 	float: left;
 	font-family: 'Helvetica', sans-serif;
 	font-size:17px;
-
 }
 
+/*nav*/
 nav{
 	float:right;
-	
-
-
 }
 
-.top ul{
-	margin:0;
-	overflow: hidden;
-
-}
-
-
-.top li a{
-	color: black;
-	text-decoration: none;
-	display: block;
-
-}
-
+/*nav-list*/
 
 .nav-link{
 		float: left;
 }
 
-
+/*menu color hover*/
 
 .nav-link.about a:hover{
 	color:#ffe400 ;
@@ -104,125 +139,82 @@ nav{
 .nav-link.news a:hover{
 	color:#00FF00 ;
 }
-.nav-link.buy a:hover{
-	color:#32EBFF ;
-}
 
 
-.close {
-    color: black;
-    font-size: 20px;
-
-}
-
-
-.aboutcontent{
+/*popup nav*/
+.popup{
     display: none; 
-    position: fixed; /* Stay in place */
-    z-index: 900; /* Sit on top */
+    position: fixed; 
     margin-top: 10px;
     margin-left:50px;
+    box-shadow: 5px 5px 13px #888888;
+}
+
+/******************************************
+/* ABOUT
+/*******************************************/
+
+.popup.about{
 	background-color: #ffe400;
 	width:450px;
     height:600px;
-    box-shadow: 5px 5px 13px #888888;
-
 }
 
+/*about&news content wrapper*/
 .content{
    width:100%;
    height:100%;
    padding-top: 20px;
    padding-left: 30px;
    padding-right: 20px;
-
+   font-family: 'Helvetica', sans-serif;
 }
-
-
+/*semititle*/
 .semititle{
-	font-family: 'Helvetica', sans-serif;
-	font-size:13px;
 	padding-bottom: 5px;
 	border-bottom: 1px solid black;
 }
-.text{
-	width:100%;
-	font-family: 'Helvetica', sans-serif;
-	font-size:13px;
-}
-.text.intro{
+/*about main text*/
+.about.text{
 	width: 100%;
 	height:80%;
-	font-family: 'Helvetica', sans-serif;
 	font-size:13px;
-
 }
-
-.text.contact{
+/*about contact*/
+.about.contact{
 	float:left;
 	width:50%;
-	font-family: 'Helvetica', sans-serif;
 	font-size:11px;
 	line-height: 140%;
-	
-
 }
-
-.text.copy{
+/*about copyright*/
+.about.right{
 	float: right;
 	width:50%;
-	font-family: 'Helvetica', sans-serif;
 	font-size:11px;
 	line-height: 120%;
-
 }
 
-.text.copy p{
-	float:left;
-	width:90%;
-	font-family: 'Helvetica', sans-serif;
-	font-size:11px;
-	line-height: 120%;
+/******************************************
+/* NEWS
+/*******************************************/
 
-}
-
-
-.newscontent{
-    display: none; 
-    position: fixed; /* Stay in place */
-    z-index: 901; /* Sit on top */
+/*news*/
+.popup.news{
     width: 450px; /* Full width */
     height: 420px; /* Full height */
-    margin-top: 10px;
-    margin-left:50px;
     background-color:#00FF00 ;
-    box-shadow: 5px 5px 13px #888888;
-
-    /*overflow: auto; */
-
 }
-
-.newsfeed{
-   padding-top: 20px;
-   padding-left: 30px;
-   padding-right: 30px;
+/*news text*/
+.news.text{
    width:100%;
    height:100%;
-
+   font-size:13px;
 }
 
-
-/*.feed2{
-	margin-top: 30px;
-	padding:20px 20px;
-	background-color:#00FF00 ;
-    height:100%;
-    box-shadow: 5px 5px 13px #888888;
-
-}*/
-
-
-
+/******************************************
+/* Main section
+/*******************************************/
 
 section{	
 	margin-right: 30px;
@@ -230,20 +222,27 @@ section{
 	
 }
 
+/******************************************
+/* titles of type
+/*******************************************/
+
 .type{
 	height:66px;
-	text-align:center;
 	width: 100%;
 	border-bottom: 1px solid black;
-
-
-
 }
+
 h1{
+	text-align:center;
 	padding-top: 1px;
 	font-size: 60px;
 	cursor: pointer;
 }
+
+/******************************************
+/* type-content
+/*******************************************/
+
 
 .type.knedge{
 	font-family: 'knedgeregular',sans-serif;
@@ -251,15 +250,14 @@ h1{
 }
 
 
-.knedgecontent{
-/*	display: none;*/
+.font{
+	display: none;
 	width: 100%;
 	height: 500px;
 	border-bottom: 1px solid black;
 	padding-bottom:20px;
 	padding-top: 20px;
 	
-
 }
 
 
@@ -278,29 +276,71 @@ section li {
 
 }
 
-.controlpannel{
+.control{
 	width: 15%;
 	height: 100%;
 	float: left;
+	font-size: 14px;
+
 }
-.sizing{
+.size{
 	width: 100%;
-	height: 95%;
+	height: 40%;
 }
 
-.typetesting{
+.size li{
+	color: black;
+	text-decoration: none;
+	display: block;
+	font-size: 14px;
+	cursor: pointer;
+
+}
+
+.sizing{
+	margin-top: 4px;
+}
+
+.module{
+	float: left;
+	height:55%;
+}
+
+.specimen{
+	float: left;
+}
+
+aside{
 	width: 85%;
 	height: 100%;
+	float: right;
 	overflow: scroll;
-	padding-left:50px;
-	padding-right:250px;
 }
 
-.typetesting h1{
+.testing{
+	padding: 0px auto 0px;
+
+}
+
+
+.typeout {
+	font-family: 'knedgeregular',sans-serif;
 	text-align:center;
-	font-size: 80px;
-
-	 
+	font-size: 85px;
+	height: 100%;
+	width: 100%;
+	padding: 0px 150px 50px 0px;
+	border: none; 
+	overflow: hidden; 
+    background-color: white;
+    resize: auto;
+    outline: none;
 }
+
+::-webkit-input-placeholder {
+   color: black;
+   line-height: 110%;
+}
+
 
 
