--- a/css/style.css
+++ b/css/style.css
@@ -79,12 +79,8 @@ body {
 
 }
 
-a{
-	text-decoration: none;
-	color:black;
-}
 
-a:visited {
+a, a:visited {
     text-decoration: none;
     color:black;
 }
@@ -94,8 +90,6 @@ a:visited {
 /*******************************************/
 
 header{
-	height:30px;
-	margin-top: 15px;
 	margin-bottom: 0px;
 	margin-right: 30px;
 	margin-left: 30px;	
@@ -106,7 +100,7 @@ header{
 /*top*/
 
 .top{
-	width: 100%
+	width: 100%;
 	padding-top:20px;
 	padding-bottom:30px;
 	border-bottom: 1px solid black;
