--- a/css/style.css
+++ b/css/style.css
@@ -139,8 +139,10 @@ nav{
 .popup{
     display: none; 
     position: fixed; 
-    margin-top: 10px;
-    margin-left:50px;
+    top:8%;
+    left: 2%;
+/*    margin-top: 10px;
+    margin-left:50px;*/
     box-shadow: 5px 5px 13px #888888;
 }
 
@@ -171,22 +173,22 @@ nav{
 /*about main text*/
 .about.text{
 	width: 100%;
-	height:80%;
+	height:70%;
 	font-size:13px;
 }
 /*about contact*/
 .about.contact{
 	float:left;
-	width:50%;
-	font-size:11px;
+	width:55%;
+	font-size:13px;
 	line-height: 140%;
 }
 /*about copyright*/
 .about.right{
 	float: right;
-	width:50%;
-	font-size:11px;
-	line-height: 120%;
+	width:45%;
+	font-size:13px;
+	line-height: 125%;
 }
 
 /******************************************
@@ -204,6 +206,10 @@ nav{
    width:100%;
    height:100%;
    font-size:13px;
+}
+
+.about.contact a:hover {
+	color: blue;
 }
 
 /******************************************
@@ -238,13 +244,13 @@ h1{
 /*******************************************/
 
 
-.type.knedge{
+#knedge{
 	font-family: 'knedgeregular',sans-serif;
 	font-size: 60px;
 }
 
 
-.font{
+.typetesting{
 	display: none;
 	width: 100%;
 	height: 500px;
@@ -258,6 +264,7 @@ h1{
 section ul{
 	margin:0;
 	overflow: hidden;
+	line-height: 120%;
 
 }
 
@@ -311,7 +318,11 @@ aside{
 	overflow: scroll;
 }
 
-.testing{
+.selected{
+	color: red;
+}
+
+.inputtesting{
 	padding: 0px auto 0px;
 
 }
@@ -337,4 +348,32 @@ aside{
 }
 
 
+input[type=range]{
+    -webkit-appearance: none;
+}
 
+input[type=range]::-webkit-slider-runnable-track {
+    height: 6px;
+    border: black 1px solid;
+    border-radius: 30px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 14px;
+    width: 14px;
+    border-radius: 50%;
+    background: red;
+    margin-top: -5px;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+
+.reset{
+	margin-top: 10px;
+	font-size: 12px;
+}
