--- a/css/original_css_0115.css
+++ b/css/original_css_0115.css
@@ -304,25 +304,20 @@ a, a:visited{
 /* HEADER
 /*******************************************/
 
-.main_innerwrapper{
-  width: 90%
-}
-
-
 header{
-
-/*  margin-left: 30px; */
+/*  margin-bottom: 0px;
+  background: red;
+  margin: 0 auto;*/
   margin-right: 30px;
-    margin-left: 30px;
-
-    width: 100%;
+  margin-left: 30px; 
+  
 
 }
 
 .header-cont{
    margin-bottom: 0px;
-/*  margin-right: 30px;*/
-/*  margin-left: 30px; */
+  margin-right: 30px;
+  margin-left: 30px; 
   top: 0;
   z-index: 1;
    width: 100%;
@@ -369,83 +364,56 @@ nav{
 }
 
 
-.test.one{
-  display: none;
-  background-color: #7D7D7D;
-  width:120px;
-  height:100%;
-   position: fixed; 
- top: 0;
- z-index: 100000;
- right:0;
-}
-.test.two{
-   display: none;
+/*popup nav*/
+/*original*/
+/*.popup{
+    display: none; 
     position: fixed; 
-    top: 0;
-    z-index: 100002;
-    right: 0;
-    width: 60px; 
-    height: 100%; 
-    background-color:#191919 ;
-
+    top:8%;
+    left: 2%;
+    box-shadow: 5px 5px 13px #888888;
+}*/
+.popup{
+    position: fixed; 
+    top:0%;
+    left: 2%;
+    box-shadow: 5px 5px 13px #888888;
 }
-
-
-
 
 /******************************************
 /* ABOUT
 /*******************************************/
 
 .popup.about{
-  border-left: 18px solid white;
-  background-color: #7D7D7D;
-  /*background-color: #ffe400;*/
-  width:300px;
+  background-color: #ffe400;
+  width:450px;
   height:100%;
-   position: fixed; 
- top: 0;
- z-index: 100001;
- right: -100px;
-
 }
-.insemititle{ padding-left: 30px;}
-
-
-
 
 /*about&news content wrapper*/
 .content{
-   width:90%;
+   width:100%;
    height:100%;
+   padding-top: 20px;
    padding-left: 30px;
    padding-right: 20px;
    font-family: 'Helvetica', sans-serif;
-   color: white;
-   display: none;
 }
-
 /*semititle*/
-.insemititle{
+.semititle{
   padding-bottom: 5px;
-    padding-top:18px;
-   font-family: 'Helvetica', sans-serif;
-   font-size: 17px;
-   color: white;
+  border-bottom: 1px solid black;
 }
-
-
 /*about main text*/
 .about.text{
   width: 100%;
   height:70%;
-  font-size:12px;
+  font-size:13px;
 }
 /*about contact*/
 .about.contact{
   float:left;
-  width:100%;
+  width:55%;
   font-size:13px;
   line-height: 140%;
 }
@@ -463,29 +431,18 @@ nav{
 
 /*news*/
 .popup.news{
-    position: fixed; 
-    top: 0;
-    z-index: 100003;
-    width: 300px; /* Full width */
-    height: 100%; /* Full height */
-    right: -200px;
-
-
-    background-color:#191919 ;
-
+    width: 450px; /* Full width */
+    height: 420px; /* Full height */
+    background-color:#00FF00 ;
 }
 /*news text*/
 .news.text{
    width:100%;
    height:100%;
-   font-size:12px;
+   font-size:13px;
 }
 
-.about.contact a{
-  color: white;
-}
-
-.about.contact a:hover{
+.about.contact a:hover {
   color: blue;
 }
 
@@ -497,12 +454,8 @@ section{
   margin-right: 30px;
   margin-left: 30px;
   margin-top:50px;
-  width: 100%;
   
 }
-
-
-
 
 /******************************************
 /* titles of type
