--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,15 @@
   box-sizing: border-box; /* IE */
 }
 
+*{padding:0; margin:0;}
+
 *{
   box-sizing: border-box;
 }
 
+html {
+    height:100%;
+}
 /* Clear fix hack */
 .clearfix :after {
   content: ".";
@@ -292,8 +297,10 @@
 /* BODY
 /*******************************************/
 body {
-  background-color: white;
-  padding-bottom: 20px;
+
+  height:100%;
+ 
+
 }
 a, a:visited{
   text-decoration: none;
@@ -305,35 +312,97 @@ a, a:visited{
 /*******************************************/
 
 .main_innerwrapper{
-  width: 90%
+  width: 88%;
+  height: 100%;
+  padding-right: 30px;
+  float:left;  
+  padding-bottom: 20px;
+
 }
+
+/*.side_innerwrapper{
+  background-color: yellow;
+  margin-left:30px;
+  width: 9%;
+  height:100vh;
+  position: fixed;
+  right: 0;
+  float: right;
+
+}
+
+*/
+
+
+.side.about{
+  border-left: 1px solid black;
+    margin-left:30px;
+  background-color: white;
+  width: 5%;
+  display: inline-block;
+   height:100vh;
+  float: left;
+  min-height: 100%;
+  z-index: 102;
+  position: fixed;
+  top:0;
+}
+
+
+.side.news{
+  background-color: white;
+  height: 100%;
+  float: right;
+  border-left: 1px solid black;
+  width: 5%;
+  height:100vh;
+  position: fixed;
+right:0;
+z-index: 105;
+
+}
+.popup.about{
+  width: 100%;
+  background-color: white;
+  height:100%;
+  display: none;
+  z-index: 100;
+
+
+}
+  .popup.news{
+    top: 0;
+    background-color: white;
+    z-index: 100006;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+  /*  position: fixed;*/
+    display: none;
+
+}
+
+
+
 
 
 header{
-
-/*  margin-left: 30px; */
-  margin-right: 30px;
-    margin-left: 30px;
-
-    width: 100%;
-
-}
-
-.header-cont{
+   margin-left: 30px;
+   padding-right: 30px;
    margin-bottom: 0px;
 /*  margin-right: 30px;*/
 /*  margin-left: 30px; */
   top: 0;
   z-index: 1;
-   width: 100%;
+   width: 88%;
   background: white;
-  margin: 0 auto;
   position: fixed;
 }
+
 
 /*top*/
 
 .top{
+
   width: 100%;
   padding-top:20px;
   padding-bottom:30px;
@@ -398,18 +467,9 @@ nav{
 /* ABOUT
 /*******************************************/
 
-.popup.about{
-  border-left: 18px solid white;
-  background-color: #7D7D7D;
-  /*background-color: #ffe400;*/
-  width:300px;
-  height:100%;
-   position: fixed; 
- top: 0;
- z-index: 100001;
- right: -100px;
 
-}
+
+
 .insemititle{ padding-left: 30px;}
 
 
@@ -422,8 +482,7 @@ nav{
    padding-left: 30px;
    padding-right: 20px;
    font-family: 'Helvetica', sans-serif;
-   color: white;
-   display: none;
+   color: black;
 }
 
 /*semititle*/
@@ -432,28 +491,27 @@ nav{
     padding-top:18px;
    font-family: 'Helvetica', sans-serif;
    font-size: 17px;
-   color: white;
+   color: black;
 }
 
 
 /*about main text*/
 .about.text{
   width: 100%;
-  height:70%;
-  font-size:12px;
+
+  height:100%;
+  font-size:17px;
 }
 /*about contact*/
 .about.contact{
-  float:left;
-  width:100%;
-  font-size:13px;
+  padding-top: 20px;
+  font-size:17px;
   line-height: 140%;
 }
 /*about copyright*/
 .about.right{
-  float: right;
-  width:45%;
-  font-size:13px;
+
+  font-size:17px;
   line-height: 125%;
 }
 
@@ -462,27 +520,16 @@ nav{
 /*******************************************/
 
 /*news*/
-.popup.news{
-    position: fixed; 
-    top: 0;
-    z-index: 100003;
-    width: 300px; /* Full width */
-    height: 100%; /* Full height */
-    right: -200px;
 
-
-    background-color:#191919 ;
-
-}
 /*news text*/
 .news.text{
    width:100%;
    height:100%;
-   font-size:12px;
+   font-size:17px;
 }
 
 .about.contact a{
-  color: white;
+  color: black;
 }
 
 .about.contact a:hover{
@@ -666,6 +713,8 @@ section li {
 
 aside{
   padding-top: 20px;
+  padding-right: 100px;
+  padding-left: 20px;
   width: 85%;
   height: 100%;
   float: right;
@@ -682,7 +731,7 @@ aside{
 }
 
 textarea{
-  padding-top: 10px;
+  padding: 20px 50px;
   resize: none;
 }
 
