--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,7 @@ html {
          url('../font/knedgelight-webfont.woff') format('woff2'),
          url('../font/knedgelight-webfont.ttf') format('truetype'),
          url('../font/knedgelight-webfont.svg#knedgelight') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -41,8 +40,6 @@ html {
          url('../font/knedgelightitalic-webfont.woff2') format('woff2'),
          url('../font/knedgelightitalic-webfont.ttf') format('truetype'),
          url('../font/knedgelightitalic-webfont.svg#knedgelight_italic') format('svg');
-    font-weight: normal;
-    font-style: italic;
 
 }
 
@@ -52,8 +49,6 @@ html {
          url('../font/knedgeregular-webfont.woff2') format('woff2'),
          url('../font/knedgeregular-webfont.ttf') format('truetype'),
          url('../font/knedgeregular-webfont.svg#knedgeregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
 
 }
 @font-face {
@@ -62,8 +57,7 @@ html {
          url('../font/knedgeregularitalic-webfont.woff2') format('woff2'),
          url('../font/knedgeregularitalic-webfont.ttf') format('truetype'),
          url('../font/knedgeregularitalic-webfont.svg#knedgeregular_italic') format('svg');
-    font-weight: normal;
-    font-style: italic;
+
 
 }
 @font-face {
@@ -72,8 +66,7 @@ html {
          url('../font/knedgebold-webfont.woff2') format('woff2'),
          url('../font/knedgebold-webfont.ttf') format('truetype'),
          url('../font/knedgebold-webfont.svg#knedgebold') format('svg');
-    font-weight: bold;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -82,8 +75,6 @@ html {
          url('../font/knedgebolditalic-webfont.woff2') format('woff2'),
          url('../font/knedgebolditalic-webfont.ttf') format('truetype'),
          url('../font/knedgebolditalic-webfont.svg#knedgebold_italic') format('svg');
-    font-weight: bold;
-    font-style: italic;
 
 }
 @font-face {
@@ -92,8 +83,7 @@ html {
          url('../font/knedgebook-webfont.woff2') format('woff2'),
          url('../font/knedgebook-webfont.ttf') format('truetype'),
          url('../font/knedgebook-webfont.svg#knedgebook') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 
@@ -103,8 +93,7 @@ html {
          url('../font/knedgeheavy-webfont.woff2') format('woff2'),
          url('../font/knedgeheavy-webfont.ttf') format('truetype'),
          url('../font/knedgeheavy-webfont.svg#knedgeheavy') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -113,8 +102,7 @@ html {
          url('../font/knedgeheavycondensed-webfont.woff2') format('woff2'),
          url('../font/knedgeheavycondensed-webfont.ttf') format('truetype'),
          url('../font/knedgeheavycondensed-webfont.svg#knedgeheavy_condensed') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -123,8 +111,6 @@ html {
          url('../font/knedgeheavyitalic-webfont.woff2') format('woff2'),
          url('../font/knedgeheavyitalic-webfont.ttf') format('truetype'),
          url('../font/knedgeheavyitalic-webfont.svg#knedgeheavy_italic') format('svg');
-    font-weight: normal;
-    font-style: italic;
 
 }
 
@@ -135,8 +121,7 @@ html {
          url('../font/commencementmono-webfont.woff2') format('woff2'),
          url('../font/commencementmono-webfont.ttf') format('truetype'),
          url('../font/commencementmono-webfont.svg#commencementmono') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 }
 /*rocle light FONT*/
 @font-face {
@@ -145,8 +130,7 @@ html {
          url('../font/roclelight-webfont.woff2') format('woff2'),
          url('../font/roclelight-webfont.ttf') format('truetype'),
          url('../font/roclelight-webfont.svg#roclelight') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 /*FRAKTUR FONT*/
@@ -156,8 +140,6 @@ html {
          url('../font/frakturjmmedium-webfont.woff2') format('woff2'),
          url('../font/frakturjmmedium-webfont.ttf') format('truetype'),
          url('../font/frakturjmmedium-webfont.svg#fraktur_jmmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
 
 }
 
@@ -167,8 +149,7 @@ html {
          url('../font/frakturjmposter-webfont.woff2') format('woff2'),
          url('../font/frakturjmposter-webfont.ttf') format('truetype'),
          url('../font/frakturjmposter-webfont.svg#fraktur_jmposter') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -177,8 +158,6 @@ html {
          url('../font/closedheavy-webfont.woff2') format('woff2'),
          url('../font/closedheavy-webfont.ttf') format('truetype'),
          url('../font/closedheavy-webfont.svg#closedheavy') format('svg');
-    font-weight: normal;
-    font-style: normal;
 
 }
 /*Arquare FONT*/
@@ -188,8 +167,7 @@ html {
          url('../font/arquarelight-webfont.woff2') format('woff2'),
          url('../font/arquarelight-webfont.ttf') format('truetype'),
          url('../font/arquarelight-webfont.svg#arquarelight') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 /*REBUILD FONT*/
@@ -199,8 +177,7 @@ html {
          url('../font/rebuildlight-webfont.woff2') format('woff2'),
          url('../font/rebuildlight-webfont.ttf') format('truetype'),
          url('../font/rebuildlight-webfont.svg#rebuildlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -209,8 +186,7 @@ html {
          url('../font/rebuildmedium-webfont.woff2') format('woff2'),
          url('../font/rebuildmedium-webfont.ttf') format('truetype'),
          url('../font/rebuildmedium-webfont.svg#rebuildmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 
@@ -220,8 +196,7 @@ html {
          url('../font/rebuildbold-webfont.woff2') format('woff2'),
          url('../font/rebuildbold-webfont.ttf') format('truetype'),
          url('../font/rebuildbold-webfont.svg#rebuildbold') format('svg');
-    font-weight: bold;
-    font-style: normal;
+
 
 }
 
@@ -232,8 +207,7 @@ html {
          url('../font/miesstencil-webfont.woff2') format('woff2'),
          url('../font/miesstencil-webfont.ttf') format('truetype'),
          url('../font/miesstencil-webfont.svg#miesstencil') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 
@@ -244,8 +218,7 @@ html {
          url('../font/flutterdimension-webfont.woff2') format('woff2'),
          url('../font/flutterdimension-webfont.ttf') format('truetype'),
          url('../font/flutterdimension-webfont.svg#flutterdimension') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -254,8 +227,7 @@ html {
          url('../font/flutterbold-webfont.woff2') format('woff2'),
          url('../font/flutterbold-webfont.ttf') format('truetype'),
          url('../font/flutterbold-webfont.svg#flutterbold') format('svg');
-    font-weight: bold;
-    font-style: normal;
+ 
 
 }
 @font-face {
@@ -264,8 +236,7 @@ html {
          url('../font/flutterlight-webfont.woff2') format('woff2'),
          url('../font/flutterlight-webfont.ttf') format('truetype'),
          url('../font/flutterlight-webfont.svg#flutterlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
+   
 
 }
 
@@ -275,8 +246,7 @@ html {
          url('../font/fluttermedium-webfont.woff2') format('woff2'),
          url('../font/fluttermedium-webfont.ttf') format('truetype'),
          url('../font/fluttermedium-webfont.svg#fluttermedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 /*opcodeFONT*/
@@ -286,8 +256,7 @@ html {
          url('../font/opcode-binary-webfont.woff2') format('woff2'),
          url('../font/opcode-binary-webfont.ttf') format('truetype'),
          url('../font/opcode-binary-webfont.svg#opcodebinary') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 /*heritageoFONT*/
@@ -297,8 +266,7 @@ html {
          url('../font/herita-geo-webfont.woff2') format('woff2'),
          url('../font/herita-geo-webfont.ttf') format('truetype'),
          url('../font/herita-geo-webfont.svg#herita-geobold') format('svg');
-    font-weight: bold;
-    font-style: normal;
+
 
 }
 /*bottomi FONT*/
@@ -308,8 +276,7 @@ html {
          url('../font/bottomioutline-webfont.woff2') format('woff2'),
          url('../font/bottomioutline-webfont.ttf') format('truetype'),
          url('../font/bottomioutline-webfont.svg#bottomioutline') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -318,8 +285,7 @@ html {
          url('../font/bottomifilled-webfont.woff2') format('woff2'),
          url('../font/bottomifilled-webfont.ttf') format('truetype'),
          url('../font/bottomifilled-webfont.svg#bottomifilled') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 /*rubend FONT*/
@@ -329,8 +295,7 @@ html {
          url('../font/rubendexpandable-webfont.woff2') format('woff2'),
          url('../font/rubendexpandable-webfont.ttf') format('truetype'),
          url('../font/rubendexpandable-webfont.svg#rubendexpandable') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -339,8 +304,7 @@ html {
          url('../font/rubendflexible-webfont.woff2') format('woff2'),
          url('../font/rubendflexible-webfont.ttf') format('truetype'),
          url('../font/rubendflexible-webfont.svg#rubendflexible') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -349,8 +313,7 @@ html {
          url('../font/rubendfoldable-webfont.woff2') format('woff2'),
          url('../font/rubendfoldable-webfont.ttf') format('truetype'),
          url('../font/rubendfoldable-webfont.svg#rubendfoldable') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 /*asialphabet FONT*/
@@ -360,8 +323,7 @@ html {
          url('../font/asialphabet-webfont.woff2') format('woff2'),
          url('../font/asialphabet-webfont.ttf') format('truetype'),
          url('../font/asialphabet-webfont.svg#asialphabetregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 /*futulabyrinth FONT*/
@@ -371,8 +333,7 @@ html {
          url('../font/futulabyrinthsquare-webfont.woff2') format('woff2'),
          url('../font/futulabyrinthsquare-webfont.ttf') format('truetype'),
          url('../font/futulabyrinthsquare-webfont.svg#futulabyrinthsquare') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 
@@ -382,8 +343,7 @@ html {
          url('../font/futulabyrinthcircuit-webfont.woff2') format('woff2'),
          url('../font/futulabyrinthcircuit-webfont.ttf') format('truetype'),
          url('../font/futulabyrinthcircuit-webfont.svg#futulabyrinthcircuit') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 
@@ -394,8 +354,7 @@ html {
          url('../font/fatolheavy-webfont.woff2') format('woff2'),
          url('../font/fatolheavy-webfont.ttf') format('truetype'),
          url('../font/fatolheavy-webfont.svg#fatolheavy') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 /*august FONT*/
@@ -405,8 +364,7 @@ html {
          url('../font/augustmedium-webfont.woff2') format('woff2'),
          url('../font/augustmedium-webfont.ttf') format('truetype'),
          url('../font/augustmedium-webfont.svg#augustmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -415,8 +373,7 @@ html {
          url('../font/augustmediumitalic-webfont.woff2') format('woff2'),
          url('../font/augustmediumitalic-webfont.ttf') format('truetype'),
          url('../font/augustmediumitalic-webfont.svg#augustmedium_italic') format('svg');
-    font-weight: normal;
-    font-style: italic;
+
 
 }
 @font-face {
@@ -425,8 +382,6 @@ html {
          url('../font/augustlight-webfont.woff2') format('woff2'),
          url('../font/augustlight-webfont.ttf') format('truetype'),
          url('../font/augustlight-webfont.svg#augustlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
 
 }
 @font-face {
@@ -435,8 +390,7 @@ html {
          url('../font/augustlightitalic-webfont.woff2') format('woff2'),
          url('../font/augustlightitalic-webfont.ttf') format('truetype'),
          url('../font/augustlightitalic-webfont.svg#augustlight_italic') format('svg');
-    font-weight: normal;
-    font-style: italic;
+
 
 }
 @font-face {
@@ -445,8 +399,7 @@ html {
          url('../font/augustbold-webfont.woff2') format('woff2'),
          url('../font/augustbold-webfont.ttf') format('truetype'),
          url('../font/augustbold-webfont.svg#augustbold') format('svg');
-    font-weight: bold;
-    font-style: normal;
+ 
 
 }
 @font-face {
@@ -455,8 +408,7 @@ html {
          url('../font/augustboldcondensed-webfont.woff2') format('woff2'),
          url('../font/augustboldcondensed-webfont.ttf') format('truetype'),
          url('../font/augustboldcondensed-webfont.svg#augustbold_condensed') format('svg');
-    font-weight: bold;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -465,8 +417,7 @@ html {
          url('../font/augustboldexpanded-webfont.woff2') format('woff2'),
          url('../font/augustboldexpanded-webfont.ttf') format('truetype'),
          url('../font/augustboldexpanded-webfont.svg#augustbold_expanded') format('svg');
-    font-weight: bold;
-    font-style: normal;
+
 
 }
 @font-face {
@@ -475,8 +426,7 @@ html {
          url('../font/augustbolditalic-webfont.woff2') format('woff2'),
          url('../font/augustbolditalic-webfont.ttf') format('truetype'),
          url('../font/augustbolditalic-webfont.svg#augustbold_italic') format('svg');
-    font-weight: bold;
-    font-style: italic;
+
 
 }
 /*august FONT*/
@@ -486,8 +436,7 @@ html {
          url('../font/bernhardjmheavy-webfont.woff2') format('woff2'),
          url('../font/bernhardjmheavy-webfont.ttf') format('truetype'),
          url('../font/bernhardjmheavy-webfont.svg#bernhard_jmheavy') format('svg');
-    font-weight: normal;
-    font-style: normal;
+
 
 }
 
@@ -726,6 +675,10 @@ nav{
   line-height: 125%;
 }
 
+::selection {
+    color: red;
+    background: yellow;
+}
 /******************************************
 /* NEWS
 /*******************************************/
